2004-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Doxyfile.in: Fix for doxygen 1.3.6
	* libpp/profile_spec.h:
	* libutil++/op_bfd.h: minor Doxygen comments fix

2004-02-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/string_manip_tests.cpp: fix a $ make check failure
	  from the last format_percent() change

2004-02-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: change output spacing.

2004-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opstack_options.h:
	* pp/opstack.cpp: pass mege_options::lib to callgraph_container
	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h: handle merge_options::lib

2004-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: use "self/child" for header
	* libutil++/string_manip.cpp: format_percent() return "0" if
	  value == 0.0
	* libpp/callgraph_container.cpp: remove some dead code.

2004-02-16  Philippe Elie  <phil.el@wanadoo.fr>

	* module/compat24.h:
	* module/x86/cpu_type.c:
	* module/x86/op_apic.c:
	* module/x86/op_model_p4.c:
	* module/x86/op_nmi.c:
	* module/x86/op_x86_model.h: backport P4 HyperThreading support from
	   2.6 to 2.4.

2004-02-16  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events:
	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/events:
	* events/i386/p4-ht/unit_masks: fix MEMORY_COMPLETE unit mask

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.cpp: samples_range() throw if start > end

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium2/unit_masks: comments
	* utils/op_help.c: add --callgraph to sanitize min events count
	* utils/opcontrol: pass --callgraph to op_help

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/oprofiled.c: send alarm() after fork not before, behavior
	  changed between 2.4 and 2.6 and according to posix 2.6 is right.

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: output the default unit mask. when querying the