@@ -6,7 +6,8 @@ for some pointers and/or read HACKING and doc/CodingStyle.
 0.8 release
 -----------
 
- o should we consider reworking opstack output format?
+ o stress test opstack: compile a Big Application w/o frame pointer and look
+  how driver and opstack react.
  o TRACE_END is no longer sent by the driver, keep it a bit for compatibility
  o callgraph_container.cpp: the inner loop in add() is very fragile!
  o child sample count for recursive function is not a bug but a feature, it
