@@ -1,3 +1,10 @@
+2004-02-21  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/format_flags.h:
+	* libpp/format_output.cpp:
+	* libpp/format_output.h:
+	* pp/opstack.cpp: alternate output format.
+
 2004-02-20  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* doc/srcdoc/Doxyfile.in: Fix for doxygen 1.3.6
